README and default settings updates.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			
 			$('.tabContainer').accordionTo({
 
-			            activeOnLoad : true,
+			            activeOnLoad : false,
 						controls : 'tabsNav',
 						accordion : 'accordionNav',
 						breakpoint : 480,
