Consolidating code and grouping Variables
Also including minified version for accordionTo script.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	
-	<script src="resources/js/accordionTo.js"></script>
+	<script src="resources/js/accordionTo.min.js"></script>
 
 	<script>
 	
